Completed CRUD API calls

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <title>Social Work App</title>
   </head>
-  <body>
+  <body bgcolor="#c6cceb">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
